Fix design and dark mode on all pages
Add skills to about me page

--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,12 @@
   transform: rotateY(-70deg) ;
   opacity: 0
 }
+
+@keyframes animate-skill-progress {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
